SUBDIRS = ext4_utils libcutils libdiskconfig libsparse libminui src

EXTRA_DIST = \
	NOTICE \
	include \
	plugins

distclean-local:
	rm -rf config.h.in~ Makefile.in aclocal.m4 autom4te.cache/ \
	config.guess config.sub depcomp install-sh ltmain.sh missing

maintainer-clean-local:
	rm -rf configure 
