noinst_LIBRARIES = libext4_utils.a
libext4_utils_a_SOURCES = \
	allocate.c \
	allocate.h \
	contents.c \
	contents.h \
	ext4_extents.h \
	ext4.h \
	ext4_utils.c \
	ext4_utils.h \
	extent.c \
	extent.h \
	indirect.c \
	indirect.h \
	jbd2.h \
	make_ext4fs.c \
	make_ext4fs.h \
	sha1.c \
	sha1.h \
	uuid.c \
	uuid.h \
	wipe.c \
	wipe.h \
	xattr.h \
	ext4fixup.c \
	ext4fixup.h \
	ext4_jbd2.h

AM_CFLAGS = \
	-m32 \
	-O2 \
	-I$(top_srcdir)/libsparse/include
